<resources>
    <string name="app_name">Verbal score</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Настройки</string>
    <string name="exercises">Тренировки</string>
    <string name="learning">Изучение</string>
    <string name="learning_text">
        Процесс сложения на соробане:\n
        1. Сброс производится стряхиванием косточек вниз (легким ударом о стол), затем указательным пальцем проводят по верхним косточкам, отодвигая их от перегородки.\n
        2. Откладывается первое слагаемое. Поразрядно набирается число, причем, все операции на соробане делаются слева - направо, т. е. сначала откладывается старший разряд, и по порядку до младшего. Повторим что "стоимость" каждой из нижних косточек - 1, каждой верхней - 5. \n
        3. Поразрядно, также слева- направо производим прибавление второго слагаемого. Прибавление интуитивно понятно, надо лишь помнить, что при переполнении разряда - добавляется 1 к старшему (слева) разряду. \n
        Вычитание производится аналогично сложению, слева направо, но при нехватке косточек их занимают у старшего (слева ) разряда. \n
        Сложение\n
        Сложение – одна из основных операций, позволяющая объединить два слагаемых.\n
        Запись сложения: 8 + 3 = 11\n
        8 и 3 – слагаемые\n
        11 – сумма\n\n
        Вычитание – действие, обратное сложению.\n
        Запись: 15–7 = 8\n
        15 – уменьшаемое\n
        7 – вычитаемое\n
        8 – разность\n
        Если разность 8, сложить с вычитаемым 7, это даст уменьшаемое 15.\n
        Операция сложения 8 + 7 = 15 является контрольной проверкой вычитания 15 – 7 = 8.\n\n
        Умножение – арифметическое действие в виде краткой записи суммы одинаковых слагаемых.\n
        Запись: 12 × 5 = 60 или 12 • 5 = 60\n
        12 – множимое\n
        5 – множитель\n
        60 – произведение\n
        12 × 5 = 12 + 12 + 12 + 12 + 12\n
        В случае если множимое и множитель поменять ролями, произведение остается одним и тем же.\n\n
        Деление – арифметическое действие обратное умножению.\n
        Запись: 48 : 6 = 8 или 48 / 6 = 8\n
        48 – делимое\n
        6 – делитель\n
        8 – частное\n
        В данном случае произведение делителя 6 и частного 8, в качестве проверки, дает делимое 48\n\n
        Извлечение квадратного корня – арифметическое действие, обратное возведению в степень 2.\n
        Квадратный корень из 9 = 3\n
        9 – подкоренное число\n
        3 – корень\n
    </string>
    <string name="normal">Обычный</string>
    <string name="hight">Высокий</string>
    <string name="expert">Эксперт</string>
    <string name="level">Уровень сложности:</string>
    <string name="show_timer">Показывать секундомер</string>
</resources>
